ci: change integration testing to use Cloud Build (#87)
* ci: change integration testing to use Cloud Build

* move cloud build file to root

* update key

* update KEY_RESOURCE_NAME

* clean up and refactor

* update integration script

* update crypto key version